<resources>
    <string name="app_name">Easy Learn</string>
    <string name="splash_logo">logo</string>
    <string name="logReg_title">Ciao</string>
    <string name="logReg_title_2">Ciao!</string>
    <string name="logReg_sub">Accedi e comincia subito ad imparare</string>
    <string name="logReg_log_btn">Login</string>
    <string name="no_account_title">Non possiedi un account?</string>
    <string name="registrati">Registrati</string>
    <string name="log_title">Bentornato.</string>
    <string name="login_title_B">B</string>
    <string name="login_sub">Accedi e comincia subito ad imparare</string>
    <string name="login_back">TODO</string>
    <string name="login_help">Hai bisogno di aiuto?</string>
    <string name="login_help_btn">TODO</string>
    <string name="login_mail">email</string>
    <string name="login_pwd">password</string>
    <string name="login_btn">Accedi</string>
    <string name="forgot_pwd">Ho dimenticato la password</string>
    <string name="faq_title">FAQ</string>
    <string name="question_1">Cosa faccio se non ho un account?</string>
    <string name="ans_1">Per creare un account nuovo, andare alla\nvoce \'Registrati\' dalla schermata principale\ne registrarsi inserendo gli opportuni dati</string>
    <string name="question_2">Non mi ricordo più la password</string>
    <string name="ans_2">Se non si ricorda più la password\nandare nella schermata di login\ne selezionare la voce\n\'Ho dimenticato la password\'</string>
    <string name="question_3">Quali dati devo fornire per creare un account</string>
    <string name="ans_3">Per creare un account su Easy Learn basta\nfornire il nome, una email valida e impostare\nuna password</string>
    <string name="back_from_faq">Torna indietro</string>
    <string name="reg_title">Benvenuto.</string>
    <string name="reg_back">TODO</string>
    <string name="reg_sub">Registrati e comincia subito ad imparare</string>
    <string name="reg_name">nome completo</string>
    <string name="reg_pwd_s">password</string>
    <string name="reg_email_s">email</string>
    <string name="campi_obb">* campi obbligatori</string>
    <string name="ast_1">*</string>
    <string name="ast_2">*</string>
    <string name="ast_3">*</string>
    <string name="oppure">oppure</string>
    <string name="reg_fb">Continua con Facebook</string>
    <string name="reg_goo">Continua con Google</string>
    <string name="exit_from_home">Esci</string>
    <string name="infos">questa è la HOME</string>
    <string name="back_to_login">TODO</string>
    <string name="pass_recover_txt">Inserire la propria email:</string>
    <string name="pwd_recover_sub">Inserire la propria email per poter impostare\nuna nuova password d\'accesso. Controllare l\'inbox\ndell\'email inserita e seguire le istruzioni per impostare\nuna nuova password.</string>
    <string name="pwd_recover_btn">Invia link di recupero</string>
    <string name="banner_txt">Il tuo portale\nper l\'informatica</string>
    <string name="banner">TODO</string>
    <string name="lib_title">Libreria delle Easy guide</string>
    <string name="macro_db">TODO</string>
    <string name="macro_web">TODO</string>
    <string name="macro_mobile">TODO</string>
    <string name="macro_algo">TODO</string>
    <string name="banner_long">TODO</string>
<<<<<<< HEAD
    <string name="il_terzo_approccio_quello_pi_consigliato_consiste_nel_collegare_alla_pagina_html_codice_javascript_presente_in_un_file_esterno_questa_tencica_permette_di_agganciare_script_e_librerie_in_modo_detto_non_intrusivo_con_il_vantaggio_di_una_separazione_netta_tra_la_struttura_del_documento_e_il_codice_come_accade_per_i_fogli_di_stile_css_che_separano_struttura_e_presentazione_n_nper_inserire_un_file_javascript_esterno_ci_serviamo_sempre_del_tag_script_in_cui_specificando_l_attributo_src_come_mostrato_dal_seguente_esempio_n"><![CDATA[Il terzo approccio, quello più consigliato, consiste nel collegare alla pagina HTML, codice JavaScript presente in un file esterno. Questa tencica permette di agganciare script e librerie in modo detto non intrusivo, con il vantaggio di una separazione netta tra la struttura del documento e il codice, come accade per i fogli di stile CSS, che separano struttura e presentazione.\n\nPer inserire un file JavaScript esterno ci serviamo sempre del tag <script> in cui specificando l’attributo src, come mostrato dal seguente esempio:\n]]></string>
=======
    <string name="about">About.</string>
    <string name="chi_siamo">Chi siamo?</string>
    <string name="siamo_attualmente_due_studenti_del_corso_ndi_laurea_in_ingegneria_informatica_all_unimore_nfrequentiamo_il_2_anno_di_corso">Siamo, attualmente due studenti del corso\ndi laurea in ingegneria informatica all\'UNIMORE.\nFrequentiamo il 2 anno di corso.</string>
    <string name="cosa_facciamo">Cosa facciamo?</string>
    <string name="questa_applicazione_mobile_stata_sviluppato_na_seguito_del_progetto_per_l_esame_del_corso_ndi_programmazione_ad_oggetti_attualmente_nl_app_non_disponibile_su_nessun_marketplace_nonline_ma_presente_online_una_repository_ngithub_dalla_quale_ricevere_informazioni">Questa applicazione mobile è stata sviluppato\na seguito del progetto per l\'esame del corso\ndi Programmazione ad Oggetti. Attualmente\nl\'app non è disponibile su nessun marketplace\nonline ma è presente online una repository\nGithub, dalla quale ricevere informazioni.</string>
    <string name="a_chi_indirizzata_questa_app">A chi è indirizzata questa app?</string>
    <string name="come_contattarci">Come contattarci?</string>
    <string name="siamo_reperibili_24_7_ai_seguenti_indirizzi_email_nwalayat_gmail_com_e_alfonzim_gmail_com">Siamo reperibili 24/7 ai seguenti indirizzi email:\nwalayat@gmail.com e alfonzim@gmail.com</string>
    <string name="questa_applicazione_stata_sviluppata_pensando_na_quelle_persone_che_vogliono_approcciarsi_nal_mondo_dell_informatica_partenzo_da_zero_nquesta_app_stata_fatta_su_misura_per_chi_non_nha_nessun_tipo_di_esperienza_pregressa_in_nquesto_campo_e_vuole_avere_un_primo_contatto_n_soft_con_la_disciplina">Questa applicazione è stata sviluppata pensando\na quelle persone che vogliono approcciarsi\nal mondo dell\'informatica partenzo da zero.\nQuesta app è stata fatta su misura per chi non\nha nessun tipo di esperienza pregressa in\nquesto campo e vuole avere un primo contatto\n\'soft\' con la disciplina.</string>
    <string name="ecco_una_lista_di_compilatori_ed_ninterpreti_online_con_i_quali_esercitarti_e_nmigliorare_le_tue_capacit_pratiche">Ecco una lista di compilatori ed\ninterpreti online con i quali esercitarti e\nmigliorare le tue capacità pratiche</string>
    <string name="modifica_immagine_di_profilo">Modifica immagine di profilo</string>
    <string name="ruolo">ruolo</string>
    <string name="sesso">sesso</string>
    <string name="telefono">telefono</string>
    <string name="_39">+39</string>
    <string name="aggiorna_i_miei_dati">Aggiorna i miei dati</string>
    <string name="ecco_i_dati_del_tuo_profilo">Ecco i dati del tuo profilo</string>
    <string name="walayatt08_gmail_com">walayatt08@gmail.com</string>
    <string name="taqasar_walayat">Taqasar Walayat</string>
    <string name="nome_completo">Nome completo</string>
    <string name="e_mail">E-mail</string>
    <string name="role">Ruolo</string>
    <string name="tel">Telefono</string>
    <string name="sex">Sesso</string>
    <string name="seleziona_la_categoria_dell_argomento_nsul_quale_vuoi_esercitarti">Seleziona la categoria dell\'argomento\nsul quale vuoi esercitarti</string>
    <string name="una_volta_scelta_la_categoria_dell_argomento_nverrai_riportato_sull_argomento_specifico_nel_nquale_esercitarti_con_il_nostro_quiz_n_nquesti_quiz_sono_stati_fatti_appositamenti_per_ntestare_le_proprie_nozioni_teoriche_ad_un_livello_di_difficolt_molto_basso">Una volta scelta la categoria dell\'argomento,\nverrai riportato sull\'argomento specifico nel\nquale esercitarti con il nostro quiz.\n\nQuesti quiz sono stati fatti appositamenti per\ntestare le proprie nozioni teoriche ad un livello di difficoltà molto basso.</string>
    <string name="todo">TODO</string>
    <string name="seleziona_un_argomento_per_cominciare_nil_quiz">Seleziona un argomento per cominciare\nil quiz:</string>
    <string name="database">Database</string>

    <string name="sviluppo_mobile">Sviluppo Mobile</string>
    <string name="sviluppo_web">Sviluppo Web</string>
    <string name="algoritmi_e_strutture_dati">Algoritmi e Strutture Dati</string>
    <string name="aq3">TODO</string>
    <string name="num_of_quiz">1/15</string>
    <string name="quiz_back">TODO</string>
    <string name="question">Qua ci va la domanda del quiz?</string>
    <string name="option_q">Opzione 1</string>
    <string name="option_1">Opzione 1</string>
    <string name="quiz_sub">Seleziona la risposta opportuna</string>
    <string name="option_4">Opzione 4</string>
    <string name="option_3">Opzione 3</string>
    <string name="option_2">Opzione 2</string>
    <string name="win_umg">TODO</string>
    <string name="riprova_il_quiz">Riprova il Quiz</string>
    <string name="leggi_corso">Leggi il corso di HTML 5</string>
    <string name="termina">Termina</string>
    <string name="score_txt">Hai risposto a 11 domande\ncorrettamente e 4 errate!</string>
    <string name="indietro">TODO</string>
    <string name="progress">TextView</string>
    <string name="carico_le_domande">Carico le domande...</string>
    <string name="leggi_il_corso_di_android">Leggi il corso di Android</string>
    <string name="leggi_il_corso_di_angular">Leggi il corso di Angular</string>
    <string name="leggi_il_corso_di_css">Leggi il corso di CSS</string>
    <string name="leggi_il_corso_di_cassandra">Leggi il corso di Cassandra</string>
    <string name="leggi_il_corso_sulla_complessit">Leggi il corso sulla Complessità</string>
    <string name="leggi_il_corso_su_flutter">Leggi il corso su Flutter</string>
    <string name="leggi_il_corso_di_javascript">Leggi il corso di JavaScript</string>
    <string name="leggi_il_corso_su_mongodb">Leggi il corso su MongoDB</string>
    <string name="leggi_il_corso_su_nodejs">Leggi il corso su NodeJS</string>
    <string name="leggi_il_corso_su_postgresql">Leggi il corso su PostgreSQL</string>
    <string name="leggi_il_corso_su_reactjs">Leggi il corso su ReactJS</string>
    <string name="leggi_il_corso_su_mysql">Leggi il corso su MySQL</string>
    <string name="leggi_il_corso_su_stack_e_memoria">Leggi il corso su Stack e Memoria</string>
    <string name="leggi_il_corso_su_swift">Leggi il corso su Swift</string>
    <string name="leggi_il_corso_sul_backtracking">Leggi il corso sul Backtracking</string>
    <string name="leggi_il_corso_sui_bst">Leggi il corso sui BST</string>
    <string name="leggi_il_corso_di_angularjs">Leggi il corso di AngularJS</string>
    <string name="carico_la_pagina">Carico la pagina...</string>
    <string name="nessun_risultato_trovato">Nessun risultato trovato :(</string>

>>>>>>> 9432bf02e18e6d2e1811e853dd9c2a97542eed89
</resources>
