<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_User">

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/reg_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColor="#474747"
        android:textColorHint="#E6474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/reg_mail_s"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/reg_email_s"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="#474747"
        android:textColorHint="#E6474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <EditText
        android:id="@+id/reg_pwd_s"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/reg_pwd_s"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="#474747"
        android:textColorHint="#E6474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/reg_goo"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/social_goo_btn_bkg"
        android:drawableStart="@drawable/goo_btn"
        android:fontFamily="@font/sf_ui_display_medium"
        android:paddingStart="20dp"
        android:text="@string/reg_goo"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/avvia_app"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_bkg"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/registrati"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <TextView
        android:id="@+id/reg_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/reg_title"
        android:textColor="#474747"
        android:textSize="55sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <ImageView
        android:id="@+id/reg_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089999974"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/reg_back" />

    <TextView
        android:id="@+id/reg_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="@string/reg_sub"
        android:textColor="#474747"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2799997" />

    <TextView
        android:id="@+id/campi_obb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_semibold"
        android:text="@string/campi_obb"
        android:textColor="#FF0092"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <TextView
        android:id="@+id/ast_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_semibold"
        android:text="@string/ast_2"
        android:textColor="#FF0092"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46" />

    <TextView
        android:id="@+id/ast_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_semibold"
        android:text="@string/ast_1"
        android:textColor="#FF0092"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.886"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373" />

    <TextView
        android:id="@+id/ast_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_semibold"
        android:text="@string/ast_3"
        android:textColor="#FF0092"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.549" />

    <TextView
        android:id="@+id/oppure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/oppure"
        android:textColor="#474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.71" />


</androidx.constraintlayout.widget.ConstraintLayout>