<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_bold"
        android:text="@string/log_title"
        android:textColor="#474747"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/login_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.80"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="@string/login_sub"
        android:textColor="#474747"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.537"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <ImageView
        android:id="@+id/login_back"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/login_back" />

    <TextView
        android:id="@+id/login_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.80"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="@string/login_help"
        android:textColor="#474747"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.187"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.932" />

    <ImageView
        android:id="@+id/login_help_btn"
        android:layout_width="27dp"
        android:layout_height="19dp"
        android:contentDescription="@string/login_help_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926"
        app:srcCompat="@drawable/help" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/login_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="#474747"
        android:textColorHint="#E6474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <EditText
        android:id="@+id/login_pwd"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/login_pwd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="#474747"
        android:textColorHint="#E6474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.453" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_bkg"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/login_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.573" />

    <TextView
        android:id="@+id/forgot_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="@string/forgot_pwd"
        android:textColor="#3F51B5"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />
</androidx.constraintlayout.widget.ConstraintLayout>