<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forgot_pwd">

    <Button
        android:id="@+id/pwd_recover_btn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:background="@drawable/button_bkg"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/pwd_recover_btn"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <EditText
        android:id="@+id/pass_recover_mail"
        android:layout_width="301dp"
        android:layout_height="43dp"
        android:background="@drawable/input_fields"
        android:ems="10"
        android:hint="@string/login_mail"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="#474747"
        android:textColorHint="#E6474747"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.255" />

    <ImageView
        android:id="@+id/back_to_login"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089999974"
        app:srcCompat="@drawable/back_arrow"
        android:contentDescription="@string/back_to_login" />

    <TextView
        android:id="@+id/pass_recover_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_medium"
        android:text="@string/pass_recover_txt"
        android:textColor="#474747"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19" />

    <TextView
        android:id="@+id/pass_recover_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_ui_display_light"
        android:text="@string/pwd_recover_sub"
        android:textColor="#474747"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349" />
</androidx.constraintlayout.widget.ConstraintLayout>